cssMemSlider/style.css
* {
    margin: 0;
}

body {
    display: flex;
    justify-content: center;
}

.wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    max-width: 60vw;
}

.slider-img {
    width: 60vw;
    height: 70vh;
}

.slider-nav {
    display: none;
}

.controls {
    display: flex;
    justify-content: right;
    gap: 3vw;
}

label {
    width: 6vh;
    height: 6vh;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: -1vh;
}

label:hover {
    cursor: pointer;
}

label:hover .control-point {
    cursor: pointer;
    box-shadow: 0 0 6px 8px #dcdcdc;
}

.control-point {
    background: #ffae2b;
    border-radius: 100%;
    width: 3vh;
    height: 3vh;
}

#slide1:checked ~ * [for="slide1"] > .control-point,
#slide2:checked ~ * [for="slide2"] > .control-point,
#slide3:checked ~ * [for="slide3"] > .control-point,
#slide4:checked ~ * [for="slide4"] > .control-point{
    background: #1eff00;
}

.slider-wrapper {
    display: flex;
    justify-self: center;
    overflow: hidden;
    width: 60vw;
    grid-column: 1 / span 2;
    margin-top: 5vh;
    margin-bottom: 5vh;
}

.slider-container {
    display: flex;
    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
}

.text-wrapper {
    display: flex;
    white-space: nowrap;
    overflow: hidden;
    height: 1.7rem;
    font-size: 1.5rem;
}

.text-container {
    display: flex;
    flex-direction: column;
    transition: margin-top 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
}

#slide1:checked ~ .slider-wrapper > .slider-container {
    margin-left: 0;
}
#slide2:checked ~ .slider-wrapper > .slider-container {
    margin-left: calc(-60vw);
}
#slide3:checked ~ .slider-wrapper > .slider-container {
    margin-left: calc(-60vw*2);
}
#slide4:checked ~ .slider-wrapper > .slider-container {
    margin-left: calc(-60vw*3);
}

#slide1:checked ~ .text-wrapper > .text-container {
    margin-top: 0;
}
#slide2:checked ~ .text-wrapper > .text-container {
    margin-top: calc(-28px);
}
#slide3:checked ~ .text-wrapper > .text-container {
    margin-top: calc(-28px*2);
}
#slide4:checked ~ .text-wrapper > .text-container {
    margin-top: calc(-28px*3);
}

@media only screen and (max-width: 850px) {
    .wrapper {
        grid-template-columns: 1fr;
        grid-template-rows: 1fr;
        max-width: 40vw;
    }

    .slider-wrapper {
        grid-column: 1 / 1;
        width: 40vw;
    }

    .controls {
        grid-row: -1 / 3;
        margin-bottom: 3vh;
        justify-content: center;
    }

    .slider-img {
        max-height: 35vh;
        max-width: 40vw;
    }

    label {
        margin: 0;
    }

    .control-point {
        width: 2vh;
        height: 2vh;
    }

    #slide1:checked ~ .slider-wrapper > .slider-container {
        margin-left: 0;
    }
    #slide2:checked ~ .slider-wrapper > .slider-container {
        margin-left: calc(-40vw);
    }
    #slide3:checked ~ .slider-wrapper > .slider-container {
        margin-left: calc(-40vw*2);
    }
    #slide4:checked ~ .slider-wrapper > .slider-container {
        margin-left: calc(-40vw*3);
    }
}

@media only screen and (max-width: 650px) {
    .wrapper {
        max-width: 60vw;
    }
    
    .slider-img {
        max-width: 60vw;
    }

    .slider-wrapper {
        width: 60vw;
    }

    .text-wrapper {
        height: 1.2rem;
        font-size: 1rem;
    }

    #slide1:checked ~ .slider-wrapper > .slider-container {
        margin-left: 0;
    }
    #slide2:checked ~ .slider-wrapper > .slider-container {
        margin-left: calc(-60vw);
    }
    #slide3:checked ~ .slider-wrapper > .slider-container {
        margin-left: calc(-60vw*2);
    }
    #slide4:checked ~ .slider-wrapper > .slider-container {
        margin-left: calc(-60vw*3);
    }

    #slide1:checked ~ .text-wrapper > .text-container {
        margin-top: 0;
    }
    #slide2:checked ~ .text-wrapper > .text-container {
        margin-top: calc(-18.5px);
    }
    #slide3:checked ~ .text-wrapper > .text-container {
        margin-top: calc(-18.5px*2);
    }
    #slide4:checked ~ .text-wrapper > .text-container {
        margin-top: calc(-18.5px*3);
    }
}

